--- a/src/content/mainmatter/beispielaufgaben/vorlesung11Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung11Aufgaben.tex
@@ -2,4 +2,4 @@
 
 \minisec{Übungsaufgabe 1:}
 Zur Berechnung einer CRC Prüfsumme soll das Generatorpolynom $x^5 + x^3 + x^2 + 1$ verwendet werden.
-Berechnen Sie die CRC-Prüfsumme zur Bitfolge \textbf{11110111} und geben Sie an, welche Daten tatsächich gesendet werden!
+Berechnen Sie die CRC-Prüfsumme zur Bitfolge \textbf{11110111} und geben Sie an, welche Daten tatsächlich gesendet werden!
