--- a/src/content/mainmatter/beispielaufgaben/vorlesung3Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung3Aufgaben.tex
@@ -4,15 +4,15 @@
 Gehen Sie von der folgenden (vereinfacht dargestellten) Routing-Tabelle aus:
 
 \begin{center}
-    \begin{tabular}{|c | c|}
+    \begin{tabular}{|c|c|}
         \hline
-        Zieleintrag      & Zu nehmender Router \\
+        Zieleintrag & Zu nehmender Router \tabularnewline
         \hline
-        139.179.200.0/21 & R1                  \\
-        139.179.128.0/18 & R2                  \\
-        139.179.112.0/20 & R3                  \\
-        139.179.192.0/20 & R4                  \\
-        139.179.0.0/16   & R5                  \\
+        139.179.200.0/21 & R1 \tabularnewline
+        139.179.128.0/18 & R2 \tabularnewline
+        139.179.112.0/20 & R3 \tabularnewline
+        139.179.192.0/20 & R4 \tabularnewline
+        139.179.0.0/16 & R5 \tabularnewline
         \hline
     \end{tabular}
 \end{center}
@@ -33,13 +33,13 @@ Begründen Sie Ihre Antwort!
 \begin{center}
     \begin{tabular}{|c | c|}
         \hline
-        Zielnetz (CIDR) & Router \\
+        Zielnetz (CIDR) & Router \tabularnewline
         \hline
-        128.128.0.0/9   & R1     \\
-        128.160.0.0/11  & R2     \\
-        128.176.0.0/12  & R1     \\
-        128.192.0.0/10  & R1     \\
-        default         & R3     \\
+        128.128.0.0/9 & R1 \tabularnewline
+        128.160.0.0/11 & R2 \tabularnewline
+        128.176.0.0/12 & R1 \tabularnewline
+        128.192.0.0/10 & R1 \tabularnewline
+        default & R3 \tabularnewline
         \hline
     \end{tabular}
 \end{center}
