--- a/src/content/mainmatter/beispielaufgaben/vorlesung5Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung5Aufgaben.tex
@@ -1,13 +1,15 @@
 \addsec{Vorlesung 5 - Beispielaufgaben}
 
 \minisec{Übungsaufgabe 1:}
-Rechner \textbf{A} sei über einen Router \textbf{R} mit Rechner \textbf{B} verbunden. Für die Strecke von \textbf{A} zum Router gelte \textbf{MTU=2000}, für die Strecke vom Router \textbf{R} zu Rechner \textbf{B} sei die \textbf{MTU 1500}:
-Es soll ein Datenpaket der Länge \textbf{3600} Byte übertragen werden (ohne IP-Header!). Skizzieren Sie den Prozess der Fragmentierung, indem sie die folgenden Tabellen ausfüllen:
+Rechner \textbf{A} sei über einen Router \textbf{R} mit Rechner \textbf{B} verbunden.
+Für die Strecke von \textbf{A} zum Router gelte \textbf{MTU=2000}, für die Strecke vom Router \textbf{R} zu Rechner \textbf{B} sei die \textbf{MTU 1500}:
+Es soll ein Datenpaket der Länge \textbf{3600} Byte übertragen werden (ohne IP-Header!).
+Skizzieren Sie den Prozess der Fragmentierung, indem sie die folgenden Tabellen ausfüllen:
 
 \begin{flushleft}
     \fbox{%
         \begin{minipage}[c]{0.5\textwidth}
-            A -> MTU 2000 -> R
+            A → MTU 2000 → R
             \centering
             \begin{tabular}{c|c|c|c}
                 \hline
@@ -18,7 +20,7 @@ Es soll ein Datenpaket der Länge \textbf{3600} Byte übertragen werden (ohne IP
 \end{flushleft}
 \fbox{%
     \begin{minipage}[c]{0.5\textwidth}
-        R -> MTU 1500 -> B
+        R → MTU 1500 → B
         \centering
         \begin{tabular}{c|c|c|c}
             \hline
