--- a/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
@@ -42,11 +42,11 @@
 \begin{itemize}
     \item Abstrakte Syntax
     \begin{itemize}
-        \item Übertragung der grundsätzlichen Struktur der Daten \[Serialisierung \:- Deserialisierung\]
+        \item Übertragung der grundsätzlichen Struktur der Daten \[Serialisierung - Deserialisierung\]
     \end{itemize}
     \item Transfersyntax
     \begin{itemize}
-        \item Übertragung des konkreten Datenstroms mit einer vereinbarten Kodierung \[Marshalling \:- Unmarshalling\]
+        \item Übertragung des konkreten Datenstroms mit einer vereinbarten Kodierung \[Marshalling - Unmarshalling\]
     \end{itemize}
 \end{itemize}
 
@@ -77,11 +77,13 @@
     \item W3C:
     \begin{itemize}
         \item XML/SOAP
-        \item Darstellung aller Datentypen als (Maschinen-)lesbarer Text. Zu klären: Zeichenkodierung
+        \item Darstellung aller Datentypen als (Maschinen-)lesbarer Text.
+        Zu klären: Zeichenkodierung
     \end{itemize}
     \item Java:
     \begin{itemize}
-        \item Objektserialisierung, d.h. Abflachung eines (oder mehrerer) Objektes zu einem seriellen Format inkl. Informationen über die Klassen. Deserialisierung ist die Wiederherstellung eines Objektes ohne Vorwissen über die Typen der Objekte
+        \item Objektserialisierung, d.h. Abflachung eines (oder mehrerer) Objektes zu einem seriellen Format inkl. Informationen über die Klassen.
+        Deserialisierung ist die Wiederherstellung eines Objektes ohne Vorwissen über die Typen der Objekte
     \end{itemize}
     \item JavaScript:
     \begin{itemize}
