--- a/src/main.tex
+++ b/src/main.tex
@@ -7,6 +7,14 @@
 
 \include{include/preamble}
 
+\hypersetup{
+    pdftitle = {Kommunikationssysteme Selbstlernfragen und Antworten},
+    pdfauthor = {Sven Bergmann},
+    pdfsubject = {Kommunikationssysteme},
+    pdfkeywords = {Kommunikationssysteme, Selbstlernfragen, Antworten},
+    bookmarks = true
+}
+
 \begin{document}
 
     \maketitle
